# duckdb-java

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  JFR.md  Makefile  README.md  UDF.MD  duckdb_java.def  duckdb_java.exp  duckdb_java.map  header2whatever.yaml  vendor.py
.github/actions/manylinux_2014_setup/: action.yml
.github/actions/ubuntu_18_setup/: action.yml
.github/composite-actions/linux-build-docker/: action.yml
.github/composite-actions/linux-build-musl-docker/: action.yml
.github/composite-actions/linux-tests-docker/: action.yml
.github/composite-actions/linux-tests-host/: action.yml
.github/composite-actions/linux-tests-musl-docker/: action.yml
.github/workflows/: InternalIssuesCreateMirror.yml  InternalIssuesUpdateMirror.yml  Java-alpine.yml  Java.yml  Java_win32.yml  Nightly.yml  Vendor.yml  test_java.yml
data/asan/: appender_asan_failure.patch
data/icu/: comma.patch
data/jepsen/: jepsen.patch
data/vendoring/: jemalloc_enforce.patch  jemalloc_packaging.patch
scripts/: format.py  jdbc_maven_deploy.py  jdbc_maven_deploy_snapshot.py  print_duckdb_version.py  upload-assets-to-staging.sh  verify-jfr-java8.sh  verify-jfr.sh
src/duckdb/: generated_extension_loader_package_build.cpp  ub_extension_core_functions_aggregate_algebraic.cpp  ub_extension_core_functions_aggregate_distributive.cpp  ub_extension_core_functions_aggregate_holistic.cpp  ub_extension_core_functions_aggregate_nested.cpp  ub_extension_core_functions_aggregate_regression.cpp  ub_extension_core_functions_scalar_blob.cpp  ub_extension_core_functions_scalar_date.cpp  ub_extension_core_functions_scalar_debug.cpp  ub_extension_core_functions_scalar_generic.cpp  ub_extension_core_functions_scalar_list.cpp  ub_extension_core_functions_scalar_map.cpp  ub_extension_core_functions_scalar_random.cpp  ub_extension_core_functions_scalar_string.cpp  ub_extension_core_functions_scalar_struct.cpp  ub_extension_core_functions_scalar_union.cpp  ub_extension_icu_third_party_icu_common.cpp  ub_extension_icu_third_party_icu_i18n.cpp  ub_extension_json_json_functions.cpp  ub_extension_parquet_decoder.cpp  ub_extension_parquet_reader.cpp  ub_extension_parquet_reader_variant.cpp  ub_extension_parquet_writer.cpp  ub_extension_parquet_writer_variant.cpp  ub_src_catalog.cpp  ub_src_catalog_catalog_entry.cpp  ub_src_catalog_catalog_entry_dependency.cpp  ub_src_common.cpp  ub_src_common_adbc_nanoarrow.cpp  ub_src_common_allocator.cpp  ub_src_common_arrow.cpp  ub_src_common_arrow_appender.cpp  ub_src_common_enums.cpp  ub_src_common_multi_file.cpp  ub_src_common_serializer.cpp  ub_src_common_sort.cpp  ub_src_common_tree_renderer.cpp  ub_src_common_types.cpp  ub_src_common_types_variant.cpp  ub_src_common_vector.cpp  (+80 more)
src/duckdb/src/common/: local_file_system.cpp
src/duckdb/src/common/allocator/: allocator_jemalloc.cpp
src/duckdb/src/function/table/version/: pragma_version.cpp
src/duckdb/src/main/: client_context.cpp
src/jni/: bindings.hpp  bindings_appender.cpp  bindings_common.cpp  bindings_data_chunk.cpp  bindings_logical_type.cpp  bindings_result.cpp  bindings_scalar_function.cpp  bindings_table_function.cpp  bindings_table_function_bind.cpp  bindings_table_function_init.cpp  bindings_validity.cpp  bindings_value.cpp  bindings_vector.cpp  config.cpp  config.hpp  duckdb_java.cpp  functions.cpp  functions.cpp.template  functions.hpp  functions.hpp.template  holders.cpp  holders.hpp  refs.cpp  refs.hpp  scalar_functions.cpp  scalar_functions.hpp  types.cpp  types.hpp  udf_callbacks.cpp  udf_callbacks.hpp  udf_registration.cpp  udf_registration.hpp  udf_registration_impl.cpp  udf_registration_internal.hpp  udf_table_bind_conversion.cpp  udf_table_bind_conversion.hpp  udf_types.cpp  udf_types.hpp  udf_vector_accessors.cpp  udf_vector_accessors.hpp  (+2 more)
src/main/java/org/duckdb/: DuckDBAppender.java  DuckDBArray.java  DuckDBArrayResultSet.java  DuckDBBindings.java  DuckDBCAPIAppender.java  DuckDBChunkedResult.java  DuckDBColumnType.java  DuckDBConnection.java  DuckDBDataChunkReader.java  DuckDBDataChunkWriter.java  DuckDBDatabaseMetaData.java  DuckDBDriver.java  DuckDBFunctionException.java  DuckDBFunctionKind.java  DuckDBFunctions.java  DuckDBGeometryDeserializer.java  DuckDBHugeInt.java  DuckDBLogicalType.java  DuckDBMemoryEvent.java  DuckDBMemoryMonitor.java  DuckDBNative.java  DuckDBParameterMetaData.java  DuckDBPendingQuery.java  DuckDBPreparedStatement.java  DuckDBReadableVector.java  DuckDBReadableVectorImpl.java  DuckDBRegisteredFunction.java  DuckDBResultSet.java  DuckDBResultSetMetaData.java  DuckDBScalarContext.java  DuckDBScalarFunction.java  DuckDBScalarFunctionAdapter.java  DuckDBScalarFunctionBuilder.java  DuckDBScalarFunctionWrapper.java  DuckDBScalarRow.java  DuckDBScalarVectorFunction.java  DuckDBSingleValueAppender.java  DuckDBStruct.java  DuckDBTableFunction.java  DuckDBTableFunctionBindInfo.java  (+24 more)
src/main/java/org/duckdb/io/: IOUtils.java  LimitedInputStream.java  LimitedReader.java
src/main/java/org/duckdb/udf/: BindContext.java  InitContext.java  ScalarUdf.java  TableBindResult.java  TableFunction.java  TableFunctionDefinition.java  TableFunctionOptions.java  TableInitContext.java  TableState.java  UdfContext.java  UdfLogicalType.java  UdfOptions.java
src/main/java/org/duckdb/user/: DuckDBMap.java  DuckDBUserArray.java  DuckDBUserStruct.java
src/stubs/: jemalloc_extension.hpp
src/test/java/org/duckdb/: TestAppender.java  TestAppenderCollection.java  TestAppenderCollection2D.java  TestAppenderComposite.java  TestBatch.java  TestBindings.java  TestCAPIAppender.java  TestChunkedResult.java  TestClosure.java  TestDuckDBJDBC.java  TestExtensionTypes.java  TestJfrEvents.java  TestMetadata.java  TestNoLib.java  TestNumeric.java  TestOptimizerCrash.java  TestParameterMetadata.java  TestPrepare.java  TestResults.java  TestScalarFunctions.java  TestSessionInit.java  TestSingleValueAppender.java  TestSpatial.java  TestTableFunctions.java  TestTimestamp.java  TestVariant.java
src/test/java/org/duckdb/test/: Assertions.java  Helpers.java  Runner.java  TempDirectory.java
